nes-core/src/Parsers/NePSL/gen/NesCEPParser.cpp

// Generated from /home/zouni/CLionProjects/nebulastream/nes-core/src/Parsers/NePSL/NesCEP.g4 by ANTLR 4.9.2


#include "Parsers/NePSL/gen/NesCEPListener.h"

#include "Parsers/NePSL/gen/NesCEPParser.h"

using namespace antlrcpp;
using namespace antlr4;

NesCEPParser::NesCEPParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NesCEPParser::~NesCEPParser() {
  delete _interpreter;
}

std::string NesCEPParser::getGrammarFileName() const {
  return "NesCEP.g4";
}

const std::vector<std::string>& NesCEPParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NesCEPParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- QueryContext ------------------------------------------------------------------

NesCEPParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::QueryContext::EOF() {
  return getToken(NesCEPParser::EOF, 0);
}

std::vector<NesCEPParser::CepPatternContext *> NesCEPParser::QueryContext::cepPattern() {
  return getRuleContexts<NesCEPParser::CepPatternContext>();
}

NesCEPParser::CepPatternContext* NesCEPParser::QueryContext::cepPattern(size_t i) {
  return getRuleContext<NesCEPParser::CepPatternContext>(i);
}


size_t NesCEPParser::QueryContext::getRuleIndex() const {
  return NesCEPParser::RuleQuery;
}

void NesCEPParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void NesCEPParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}

NesCEPParser::QueryContext* NesCEPParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, NesCEPParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(88);
      cepPattern();
      setState(91); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == NesCEPParser::PATTERN);
    setState(93);
    match(NesCEPParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CepPatternContext ------------------------------------------------------------------

NesCEPParser::CepPatternContext::CepPatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::CepPatternContext::PATTERN() {
  return getToken(NesCEPParser::PATTERN, 0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::NAME() {
  return getToken(NesCEPParser::NAME, 0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::SEP() {
  return getToken(NesCEPParser::SEP, 0);
}

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::CepPatternContext::compositeEventExpressions() {
  return getRuleContext<NesCEPParser::CompositeEventExpressionsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::FROM() {
  return getToken(NesCEPParser::FROM, 0);
}

NesCEPParser::InputStreamsContext* NesCEPParser::CepPatternContext::inputStreams() {
  return getRuleContext<NesCEPParser::InputStreamsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::INTO() {
  return getToken(NesCEPParser::INTO, 0);
}

NesCEPParser::SinkListContext* NesCEPParser::CepPatternContext::sinkList() {
  return getRuleContext<NesCEPParser::SinkListContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WHERE() {
  return getToken(NesCEPParser::WHERE, 0);
}

NesCEPParser::WhereExpContext* NesCEPParser::CepPatternContext::whereExp() {
  return getRuleContext<NesCEPParser::WhereExpContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WITHIN() {
  return getToken(NesCEPParser::WITHIN, 0);
}

NesCEPParser::TimeConstraintsContext* NesCEPParser::CepPatternContext::timeConstraints() {
  return getRuleContext<NesCEPParser::TimeConstraintsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::CONSUMING() {
  return getToken(NesCEPParser::CONSUMING, 0);
}

NesCEPParser::OptionContext* NesCEPParser::CepPatternContext::option() {
  return getRuleContext<NesCEPParser::OptionContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::RETURN() {
  return getToken(NesCEPParser::RETURN, 0);
}

NesCEPParser::OutputExpressionContext* NesCEPParser::CepPatternContext::outputExpression() {
  return getRuleContext<NesCEPParser::OutputExpressionContext>(0);
}


size_t NesCEPParser::CepPatternContext::getRuleIndex() const {
  return NesCEPParser::RuleCepPattern;
}

void NesCEPParser::CepPatternContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCepPattern(this);
}

void NesCEPParser::CepPatternContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCepPattern(this);
}

NesCEPParser::CepPatternContext* NesCEPParser::cepPattern() {
  CepPatternContext *_localctx = _tracker.createInstance<CepPatternContext>(_ctx, getState());
  enterRule(_localctx, 2, NesCEPParser::RuleCepPattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(NesCEPParser::PATTERN);
    setState(96);
    match(NesCEPParser::NAME);
    setState(97);
    match(NesCEPParser::SEP);
    setState(98);
    compositeEventExpressions();
    setState(99);
    match(NesCEPParser::FROM);
    setState(100);
    inputStreams();
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NesCEPParser::WHERE) {
      setState(101);
      match(NesCEPParser::WHERE);
      setState(102);
      whereExp();
    }
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NesCEPParser::WITHIN) {
      setState(105);
      match(NesCEPParser::WITHIN);
      setState(106);
      timeConstraints();
    }
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NesCEPParser::CONSUMING) {
      setState(109);
      match(NesCEPParser::CONSUMING);
      setState(110);
      option();
    }
    setState(115);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NesCEPParser::RETURN) {
      setState(113);
      match(NesCEPParser::RETURN);
      setState(114);
      outputExpression();
    }
    setState(117);
    match(NesCEPParser::INTO);
    setState(118);
    sinkList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputStreamsContext ------------------------------------------------------------------

NesCEPParser::InputStreamsContext::InputStreamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NesCEPParser::InputStreamContext *> NesCEPParser::InputStreamsContext::inputStream() {
  return getRuleContexts<NesCEPParser::InputStreamContext>();
}

NesCEPParser::InputStreamContext* NesCEPParser::InputStreamsContext::inputStream(size_t i) {
  return getRuleContext<NesCEPParser::InputStreamContext>(i);
}

std::vector<tree::TerminalNode *> NesCEPParser::InputStreamsContext::COMMA() {
  return getTokens(NesCEPParser::COMMA);
}

tree::TerminalNode* NesCEPParser::InputStreamsContext::COMMA(size_t i) {
  return getToken(NesCEPParser::COMMA, i);
}


size_t NesCEPParser::InputStreamsContext::getRuleIndex() const {
  return NesCEPParser::RuleInputStreams;
}

void NesCEPParser::InputStreamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInputStreams(this);
}

void NesCEPParser::InputStreamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInputStreams(this);
}

NesCEPParser::InputStreamsContext* NesCEPParser::inputStreams() {
  InputStreamsContext *_localctx = _tracker.createInstance<InputStreamsContext>(_ctx, getState());
  enterRule(_localctx, 4, NesCEPParser::RuleInputStreams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    inputStream();
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NesCEPParser::COMMA) {
      setState(121);
      match(NesCEPParser::COMMA);
      setState(122);
      inputStream();
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputStreamContext ------------------------------------------------------------------

NesCEPParser::InputStreamContext::InputStreamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> NesCEPParser::InputStreamContext::NAME() {
  return getTokens(NesCEPParser::NAME);
}

tree::TerminalNode* NesCEPParser::InputStreamContext::NAME(size_t i) {
  return getToken(NesCEPParser::NAME, i);
}

tree::TerminalNode* NesCEPParser::InputStreamContext::AS() {
  return getToken(NesCEPParser::AS, 0);
}


size_t NesCEPParser::InputStreamContext::getRuleIndex() const {
  return NesCEPParser::RuleInputStream;
}

void NesCEPParser::InputStreamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInputStream(this);
}

void NesCEPParser::InputStreamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInputStream(this);
}

NesCEPParser::InputStreamContext* NesCEPParser::inputStream() {
  InputStreamContext *_localctx = _tracker.createInstance<InputStreamContext>(_ctx, getState());
  enterRule(_localctx, 6, NesCEPParser::RuleInputStream);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(NesCEPParser::NAME);
    setState(131);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NesCEPParser::AS) {
      setState(129);
      match(NesCEPParser::AS);
      setState(130);
      match(NesCEPParser::NAME);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompositeEventExpressionsContext ------------------------------------------------------------------

NesCEPParser::CompositeEventExpressionsContext::CompositeEventExpressionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::LPARENTHESIS() {
  return getToken(NesCEPParser::LPARENTHESIS, 0);
}

NesCEPParser::ListEventsContext* NesCEPParser::CompositeEventExpressionsContext::listEvents() {
  return getRuleContext<NesCEPParser::ListEventsContext>(0);
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::RPARENTHESIS() {
  return getToken(NesCEPParser::RPARENTHESIS, 0);
}


size_t NesCEPParser::CompositeEventExpressionsContext::getRuleIndex() const {
  return NesCEPParser::RuleCompositeEventExpressions;
}

void NesCEPParser::CompositeEventExpressionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompositeEventExpressions(this);
}

void NesCEPParser::CompositeEventExpressionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompositeEventExpressions(this);
}

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::compositeEventExpressions() {
  CompositeEventExpressionsContext *_localctx = _tracker.createInstance<CompositeEventExpressionsContext>(_ctx, getState());
  enterRule(_localctx, 8, NesCEPParser::RuleCompositeEventExpressions);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(NesCEPParser::LPARENTHESIS);
    setState(134);
    listEvents();
    setState(135);
    match(NesCEPParser::RPARENTHESIS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereExpContext ------------------------------------------------------------------

NesCEPParser::WhereExpContext::WhereExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NesCEPParser::ExpressionContext* NesCEPParser::WhereExpContext::expression() {
  return getRuleContext<NesCEPParser::ExpressionContext>(0);
}


size_t NesCEPParser::WhereExpContext::getRuleIndex() const {
  return NesCEPParser::RuleWhereExp;
}

void NesCEPParser::WhereExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereExp(this);
}

void NesCEPParser::WhereExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereExp(this);
}

NesCEPParser::WhereExpContext* NesCEPParser::whereExp() {
  WhereExpContext *_localctx = _tracker.createInstance<WhereExpContext>(_ctx, getState());
  enterRule(_localctx, 10, NesCEPParser::RuleWhereExp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TimeConstraintsContext ------------------------------------------------------------------

NesCEPParser::TimeConstraintsContext::TimeConstraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::LBRACKET() {
  return getToken(NesCEPParser::LBRACKET, 0);
}

NesCEPParser::IntervalContext* NesCEPParser::TimeConstraintsContext::interval() {
  return getRuleContext<NesCEPParser::IntervalContext>(0);
}

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::RBRACKET() {
  return getToken(NesCEPParser::RBRACKET, 0);
}


size_t NesCEPParser::TimeConstraintsContext::getRuleIndex() const {
  return NesCEPParser::RuleTimeConstraints;
}

void NesCEPParser::TimeConstraintsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTimeConstraints(this);
}

void NesCEPParser::TimeConstraintsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTimeConstraints(this);
}

NesCEPParser::TimeConstraintsContext* NesCEPParser::timeConstraints() {
  TimeConstraintsContext *_localctx = _tracker.createInstance<TimeConstraintsContext>(_ctx, getState());
  enterRule(_localctx, 12, NesCEPParser::RuleTimeConstraints);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    match(NesCEPParser::LBRACKET);
    setState(140);
    interval();
    setState(141);
    match(NesCEPParser::RBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntervalContext ------------------------------------------------------------------

NesCEPParser::IntervalContext::IntervalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::IntervalContext::INT() {
  return getToken(NesCEPParser::INT, 0);
}

NesCEPParser::IntervalTypeContext* NesCEPParser::IntervalContext::intervalType() {
  return getRuleContext<NesCEPParser::IntervalTypeContext>(0);
}


size_t NesCEPParser::IntervalContext::getRuleIndex() const {
  return NesCEPParser::RuleInterval;
}

void NesCEPParser::IntervalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInterval(this);
}

void NesCEPParser::IntervalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInterval(this);
}

NesCEPParser::IntervalContext* NesCEPParser::interval() {
  IntervalContext *_localctx = _tracker.createInstance<IntervalContext>(_ctx, getState());
  enterRule(_localctx, 14, NesCEPParser::RuleInterval);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(NesCEPParser::INT);
    setState(144);
    intervalType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntervalTypeContext ------------------------------------------------------------------

NesCEPParser::IntervalTypeContext::IntervalTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::QUARTER() {
  return getToken(NesCEPParser::QUARTER, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MONTH() {
  return getToken(NesCEPParser::MONTH, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::DAY() {
  return getToken(NesCEPParser::DAY, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::HOUR() {
  return getToken(NesCEPParser::HOUR, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MINUTE() {
  return getToken(NesCEPParser::MINUTE, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::WEEK() {
  return getToken(NesCEPParser::WEEK, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::SECOND() {
  return getToken(NesCEPParser::SECOND, 0);
}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MICROSECOND() {
  return getToken(NesCEPParser::MICROSECOND, 0);
}


size_t NesCEPParser::IntervalTypeContext::getRuleIndex() const {
  return NesCEPParser::RuleIntervalType;
}

void NesCEPParser::IntervalTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIntervalType(this);
}

void NesCEPParser::IntervalTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIntervalType(this);
}

NesCEPParser::IntervalTypeContext* NesCEPParser::intervalType() {
  IntervalTypeContext *_localctx = _tracker.createInstance<IntervalTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, NesCEPParser::RuleIntervalType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << NesCEPParser::QUARTER)
      | (1ULL << NesCEPParser::MONTH)
      | (1ULL << NesCEPParser::DAY)
      | (1ULL << NesCEPParser::HOUR)
      | (1ULL << NesCEPParser::MINUTE)
      | (1ULL << NesCEPParser::WEEK)
      | (1ULL << NesCEPParser::SECOND)
      | (1ULL << NesCEPParser::MICROSECOND))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionContext ------------------------------------------------------------------

NesCEPParser::OptionContext::OptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::OptionContext::ALL() {
  return getToken(NesCEPParser::ALL, 0);
}

tree::TerminalNode* NesCEPParser::OptionContext::NONE() {
  return getToken(NesCEPParser::NONE, 0);
}


size_t NesCEPParser::OptionContext::getRuleIndex() const {
  return NesCEPParser::RuleOption;
}

void NesCEPParser::OptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOption(this);
}

void NesCEPParser::OptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NesCEPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOption(this);
}

NesCEPParser::OptionContext* NesCEPParser::option() {
  OptionContext *_localctx = _tracker.createInstance<OptionContext>(_ctx, getState());
  enterRule(_localctx, 18, NesCEPParser::RuleOption);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    _la = _input->LA(1);
    if (!(_la == NesCEPParser::ALL

    || _la == NesCEPParser::NONE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputExpressionContext ------------------------------------------------------------------

NesCEPParser::OutputExpressionContext::OutputExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NesCEPParser::OutputExpressionContext::NAME() {
  return getToken(NesCEPParser::NAME, 0);
}

tree::TerminalNode* NesCEPParser::OutputExpressionContext::SEP() {
  return getToken(NesCEPParser::SEP, 0);
}

tree::TerminalNode* NesCEPParser::OutputExpressionContext::LBRACKET() {
  return getToken(NesCEPParser::LBRACKET, 0);
}

std::vector<NesCEPParser::OutAttributeContext *> NesCEPParser::OutputExpressionContext::outAttribute() {
  return getRuleContexts<NesCEPParser::OutAttributeContext>();
}

NesCEPParser::OutAttributeContext* NesCEPParser::OutputExpressionContext::outAttribute(size_t i) {
  return getRuleContext<NesCEPParser::OutAttributeContext>(i);
}

tree::TerminalNode* NesCEPParser::OutputExpressionContext::RBRACKET() {
  return getToken(NesCEPParser::RBRACKET, 0);
}

std::vector<tree::TerminalNode *> NesCEPParser::OutputExpressionContext::COMMA() {
  return getTokens(NesCEPParser::COMMA);
}
